client/src/App.css
.App {
  text-align: center;
  display: flex;
  flex-direction: row;
  overflow-x: hidden;
  overflow-y: hidden;
}

/* UI */

.ui{
  width: 15vw;
  min-height: 100vh;
  background-color: lightgrey;
}

.ui__layer-selection_title{
  font-size: 1.2rem;
  font-weight: 400;
  border-bottom: 1px solid black;
}
.ui__layer-selection_list{
  list-style: none;
  text-align: start;
}

.ui__show-grid_title{
  font-size: 1.2rem;
  font-weight: 400;
  border-bottom: 1px solid black;
}

.ui__show-grid_checkbox{
  text-align: start;
  padding-left: 40px;
}

.ui__scale-map_title{
  font-size: 1.2rem;
  font-weight: 400;
  border-bottom: 1px solid black;
}

.ui__scale-map_select{
  text-align: start;
}


/* Tilemap */


.tile_map{
  width: 85vw;
  height: 100vh;
  background-color: gray;
  border: 5px solid black;
  box-sizing: border-box;
  overflow-x: auto;
  overflow-y: auto;
  position: relative;
}

/* GRID LAYER */
.grid-layer{
  pointer-events:none;
  opacity: 0.5;
  z-index: 4;
  display:flex;
  flex-wrap: wrap;
  min-height: 32;
  position: absolute;
}

.grid-layer__tile{
  box-sizing: border-box;
  border: 1px solid black;
}

/* PLAYER LAYER */

.player-layer{
  display:flex;
  flex-wrap: wrap;
  min-height: 32;
  position: absolute;
  z-index: 2;
}

/* GRID LAYER */

.ground-layer{
  display:flex;
  flex-wrap: wrap;
  min-height: 32;
  z-index: 1;
}

/* TILE */

.tile{
  box-sizing: border-box;
  width: 32px;
  height: 32px;
}

.tile:hover{
  cursor: pointer;
  border: 2px aquamarine outset;
}

/* MODALS */

.select-tile{
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  z-index: 100;
}

.select-tile__menu{
  z-index: 100;
  position: fixed;
  top: 30%;
  left: 50%;
  background-color: lightgrey;
  padding: 20px;
  border-radius: 15px;
  border: 2px solid black;
}

.select-tile__menu_tile{
  width: 32px;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid black;
}

.select-tile__menu_tile:hover{
  cursor: pointer;
  border: 2px solid rgb(2, 210, 247);
}

